# reddit

./: .env.example  .gitignore  Dockerfile.worker  Makefile  Pipfile  Procfile.aggregator  Procfile.alert  Procfile.backup  Procfile.ingestor  Procfile.web  README.md  alembic.ini  init_schema.sql  pyproject.toml  railway.ingestor.toml  start-aggregator.sh  start-alert-worker.sh  start-ingestor.sh
.github/workflows/: ci.yml
data/: tickers.csv
docs/: AGENTS.md  PRD.md  SPEC.md
infra/alembic/: env.py  script.py.mako
infra/alembic/versions/: 202502111200_initial_schema.py  202502111245_add_price_at_mention.py
infra/helm/: README.md
scripts/: run_aggregator.py  run_aggregator_continuous.py  run_alert_worker.py  run_ingestor.py  seed_tickers.py
src/api/: app.py  server.py  service.py  stream.py
src/backtester/: runner.py
src/common/: config.py  db.py  models.py
src/ingestor/: reddit_client.py  repository.py  service.py
src/nlp/: pipeline.py
src/price/: client.py  harvester.py  service.py
src/trend/: aggregator.py  alerts.py  detectors.py  worker.py
tests/unit/: test_smoke.py
tests/unit/api/: test_server.py  test_stream.py  test_trend_service.py
tests/unit/ingestor/: test_pipeline.py  test_repository.py
tests/unit/nlp/: test_extractor.py  test_sentiment.py
tests/unit/price/: test_service.py
tests/unit/scripts/: test_seed_tickers.py
tests/unit/trend/: test_aggregation_repository.py  test_aggregator.py  test_alerts.py  test_detectors.py
web/: .env.production  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
(+25 files in other folders)
