[project]
name = "wsb-hype-radar"
version = "0.1.0"
description = "WallStreetBets hype detection stack"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Reddit Radar Team"}]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "RUF", "S"]
ignore = ["S101", "S404", "S603"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "S603"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --maxfail=1"
testpaths = ["tests"]
asyncio_mode = "auto"
